--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  scoped_model: ^2.0.0
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.4
+  flutter_slidable: ^3.1.1
+  intl: ^0.18.1
+  image_picker: ^1.1.2
+  flutter_calendar_carousel: ^2.4.3
 
 dev_dependencies:
   flutter_test:
